# linkedin-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
linkedin_cli/: __init__.py  auth.py  browser.py  cli.py  client.py  config.py  constants.py  formatter.py  models.py  serialization.py  transport.py
skills/linkedin-cli/: SKILL.md
skills/linkedin-cli-auth/: SKILL.md
skills/linkedin-cli-auth/agents/: openai.yaml
skills/linkedin-cli-auth/references/: auth-troubleshooting.md
skills/linkedin-cli-write/: SKILL.md
skills/linkedin-cli-write/agents/: openai.yaml
skills/linkedin-cli-write/references/: write-workflows.md
skills/linkedin-cli/agents/: openai.yaml
skills/linkedin-cli/references/: command-cookbook.md
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_formatter.py  test_serialization.py  test_transport.py
